--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "gray": "cross-env PATH_TYPE=gray nuxt build",
+    "build": "cross-env PATH_TYPE=production nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -17,10 +18,11 @@
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "echarts": "^4.4.0",
-    "echarts-wordcloud": "^1.1.3",
+    "echarts": "^5.0.2",
+    "echarts-wordcloud": "^2.0.0",
     "element-ui": "^2.12.0",
     "file-saver": "^2.0.2",
+    "font-awesome": "^4.7.0",
     "marked": "^0.7.0",
     "material-design-icons": "^3.0.1",
     "mavon-editor": "^2.9.0",
