--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@growthbunker/vuetimeline": "^0.1.17",
     "@nuxtjs/axios": "^5.12.1",
     "@nuxtjs/sitemap": "^2.4.0",
+    "animate.css": "^3.5.0",
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
